# qn-changelog-rs

./: .editorconfig  Cargo.toml
src/: errors.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs  preference.rs
src/entry/: github_pr.rs  issues.rs  mod.rs  traits.rs
src/filter/: mod.rs
src/fmt/: html.rs  jira.rs  markdown.rs  mod.rs  traits.rs
src/source/: github.rs  mod.rs
