[package]
name = "qn-changelog-rs"
version = "0.1.0"
authors = ["Wang Xuerui <wangxuerui@qiniu.com>"]
edition = "2018"

[profile.release]
lto = true

[features]
default = ["clipboard"]

[dependencies]
atomicwrites = "0.1"
bytes = "0.4"
chrono = "0.4"
clap = "2"
clipboard = { version = "0.5", optional = true }
dirs = "2.0"
error-chain = "0.11"
# github-rs = "0.6"
lazy_static = "1.0"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.github-rs]
git = "https://github.com/xen0n/github-rs"
branch = "temp-for-qn-changelog"
default-features = false
features = ["rust-native-tls"]
