[package]
name = "qn-changelog-rs"
version = "0.3.0"
authors = ["Wang Xuerui <wangxuerui@qiniu.com>"]
description = "Qiniu changelog generator (Rust port)"
edition = "2018"

[profile.release]
lto = true

[features]
default = ["clipboard"]

[dependencies]
atomicwrites = "0.1"
bytes = "0.4"
chrono = "0.4"
clipboard = { version = "0.5", optional = true }
dirs = "2.0"
failure = "0.1"
lazy_static = "1.0"
octocrab = "0.11"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
